--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+
 # Created by https://www.gitignore.io/api/xcode,macos,carthage
 
 ### Carthage ###
@@ -39,6 +40,7 @@ Temporary Items
 
 ## Build generated
 build/
+DerivedData/
 
 ## Various settings
 *.pbxuser
